# screen-buoy

./: .gitignore  README.md  README_zh.md  main.bak  overlay.html  package-lock.json  package.json
src/: App.tsx  i18n.ts  index.html  main.tsx
src-tauri/: Cargo.toml  Tauri.toml  config.default  config.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app_windows/: mod.rs  windows.rs
src-tauri/src/config/: hint.rs  keybinding.rs  keyboard.rs  mod.rs  mouse.rs  system.rs  ui_automation.rs
src-tauri/src/configs/: hints.rs  keybindings.rs  keyboard.rs  mod.rs  mouse.rs
src-tauri/src/element/: element.rs  mod.rs  ui_automation.rs
src-tauri/src/elements/: elements.rs  mod.rs
src-tauri/src/hint/: generator.rs  hint.rs  mod.rs  overlay.rs  storage.rs
src-tauri/src/hints/: generator.rs  mod.rs  overlay.rs  storage.rs
src-tauri/src/input/: executor.rs  hook.rs  keyboard.rs  mod.rs  mouse.rs
src-tauri/src/inputs/: executor.rs  hook.rs  keyboard.rs  mod.rs  mouse.rs
src-tauri/src/monitor/: monitor.rs
src-tauri/src/monitors/: mod.rs  monitor.rs
src-tauri/src/utils/: logger.rs  mod.rs
src-tauri/src/window/: mod.rs  window.rs
src/components/settings/: Settings.tsx
src/components/settings/sections/: HintSettings.tsx  KeybindingSettings.tsx  KeyboardSettings.tsx  MouseSettings.tsx  SystemSettings.tsx  UiAutomationSettings.tsx
src/hooks/: useKeyOptions.ts
src/locales/: en.json  zh.json
src/styles/: App.css  global.css  globals.css  index.css
src/types/: config.ts
