[package]
name = "screen-buoy"
version = "0.1.0"
description = "A screen hint tool"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "window-show", "app-show", "global-shortcut-all", "app-hide", "window-set-focus", "window-close", "window-hide", "system-tray", "devtools"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_UI_HiDpi",
    "Win32_UI_Input",
] }
tokio = { version = "1.44.2", features = ["time"] }
once_cell = "1.21.3"
lazy_static = "1.5.0"
thread_local = "1.1.8"
indexmap = "2.9.0"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = "0.4"
toml = "0.8.10"

[features]
custom-protocol = ["tauri/custom-protocol"] 
